# test-messages-app

./: .gitignore  README.md
frontend/: package-lock.json
frontend/src/: App.jsx
rust_api/: .env  Cargo.toml
rust_api/src/: main.rs
